footnote, pages, gitignore

--- a/styles/beamerouterthemeflux.sty
+++ b/styles/beamerouterthemeflux.sty
@@ -58,7 +58,7 @@
 	\rule{0.95\paperwidth}{0.2pt}
 \end{beamercolorbox}%
 \begin{beamercolorbox}[wd=\textwidth, leftskip=0.3cm,rightskip=0.3cm, ht=0.3cm,dp=0.15cm]{footer text}%
-	\usebeamerfont{footnote}\copyright \ \insertauthor\hfill
+	% \usebeamerfont{footnote}\copyright \ \insertauthor\hfill
 	% Uncomment to display navigation button
 	%\insertslidenavigationsymbol%
 	%\insertframenavigationsymbol%
@@ -66,7 +66,7 @@
 	%\insertsectionnavigationsymbol%
 	%\insertdocnavigationsymbol%
 	%\insertbackfindforwardnavigationsymbol%	
-	\hfill\insertframenumber%
+	\hfill\insertframenumber\,/\,\inserttotalframenumber%
 \end{beamercolorbox}%
 }
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
