--- a/demo.tex
+++ b/demo.tex
@@ -28,7 +28,7 @@
 % Informations
 \title{Flux beamer template}
 \subtitle{Modern theme v0.1}
-\author{John Doe}
+\author{Leonardo Salicari}
 \institute{Institute, location}
 \date{\today}
 \titlegraphic{assets/overleaf.png}
@@ -47,12 +47,6 @@
 \section{Presentation}
 
 \subsection{introduction}
-
-\begin{frame}{Flux}{introduction}
-	\justifying
- Flux is a modern style beamer presentation. It is provided as a work in progress version and may suffer from inconsistencies. Sources and complementary information are available at\\[0.3cm]
- 	\centering\textbf{github.com/pvanberg/flux-beamer}
-\end{frame}
 
 \def\beamer@mytheme@style{green}
 \begin{frame}[fragile]{Flux}{colors}
@@ -245,33 +239,6 @@ Give a look at https://github.com/matze/mtheme/tree/master/demo}
 	
 \end{frame}
 
-\begin{frame}{Flux}{diagrams}
-\centering
-\begin{tikzpicture}
-    \sbEntree{E}
-    \sbComp{a}{E}
-    \sbBlocL{c}{$H_2$}{a}
-            \sbRelier[$\epsilon$]{a}{c}
-    \sbComph{d}{c}
-            \sbRelier[u]{c}{d}
-    \sbBlocL{e}{$H_3$}{d}
-    \sbBlocL{f}{$H_4$}{e}
-    \sbSortie[5]{S1}{f}
-            \sbRelier{f}{S1}
-            \sbNomLien[0.8]{S1}{$S_1$}
-    \sbDecaleNoeudy[-4]{f}{u}
-    \sbDecaleNoeudy{e}{v}
-    \sbBlocr{r1}{$R_1$}{u}
-    \sbBlocr{r2}{$R_2$}{v}
-    \sbBlocrL{r3}{$R_3$}{r2}
-    \sbRelieryx{f-S1}{r1}
-    \sbRelierxy[n1]{r1}{d}
-    \sbRelieryx{e-f}{r2}
-    \sbRelierxy[n2]{r3}{a}
-\end{tikzpicture}\\[0.4cm]
-Bloc diagram example from \textbf{texample.net}
-\end{frame}
-
 \begin{frame}{Flux}{plots}
 	\begin{minipage}{0.58\textwidth}
 		\begin{figure}
@@ -299,14 +266,6 @@ Bloc diagram example from \textbf{texample.net}
 	  This is a plain frame.\\
 	  Use it to display full page images.
 	  \end{center}
-\end{frame}
-
-\begin{frame}[allowframebreaks]{References}
-
-  \nocite{*}
-  \bibliography{demo}
-  \bibliographystyle{abbrv}
-
 \end{frame}
 
 \section{Next section}
