--- a/demo.tex
+++ b/demo.tex
@@ -1,7 +1,7 @@
-\documentclass[9pt]{beamer}
+\documentclass[8pt]{beamer}
 
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-% Use roboto Font (recommended)
+% Use roboto Font
 \usepackage[sfdefault]{roboto}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
@@ -14,6 +14,12 @@
 % Use Flux theme v0.1 beta
 % Available style: asphalt, blue, red, green, gray 
 \usetheme[style=asphalt]{flux}
+%~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
+%~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+% Addition options for the presentation
+\setbeamercovered{transparent} % \pause generates transparent text (figures do not work)
+\usepackage{appendixnumberbeamer} % avoid counting backup slides
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -31,18 +37,22 @@
 \author{Leonardo Salicari}
 \institute{Institute, location}
 \date{\today}
-\titlegraphic{assets/overleaf.png}
+\titlegraphic{assets/dfa_unipd_white.png}
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 \begin{document}
 
+%========================================================================
 % Generate title page
 \titlepage
+%========================================================================
 
+%========================================================================
 \begin{frame}
  \frametitle{Table of contents}
  \tableofcontents
 \end{frame}
+%========================================================================
 
 \section{Presentation}
 
@@ -286,6 +296,14 @@ Give a look at https://github.com/matze/mtheme/tree/master/demo}
 Inspired by \textbf{Metropolis} theme from Matthias Vogelgesang.\\
 https://github.com/matze/mtheme 
  
+\end{frame}
+
+%========================================================================
+%% Backup slides
+\appendix % avoid counting backup slides
+
+\begin{frame}{Backup}
+  Backup
 \end{frame}
 
 \end{document}
